--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="Luiz Gustavo Balbino Serra Dos Santos - Namorado da Ana Luiza - Te amo amor, se vc ver isso">
-    <title>Desafio Granpic</title>
+    <title>Desafio GrandPrix</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
@@ -17,7 +17,7 @@
                 <circle cx="12" cy="12" r="10"></circle>
                 <path d="M12 2v20M2 12h20M17 12a5 5 0 0 1-10 0"></path>
             </svg>
-            <h1>Granpic</h1>
+            <h1>GrandPrix</h1>
         </div>
         <p>Aumentando a eficiência e reduzindo custos nas operações de óleo e gás.</p>
     </header>
@@ -109,7 +109,7 @@
     </main>
 
     <footer>
-        <p>&copy; 2025 Granpic - Todos os direitos reservados.</p>
+        <p>&copy; 2025 GrandPrix - Todos os direitos reservados.</p>
         <p>Feito por <a href="https://trampocorp.netlify.app">Luiz Gustavo</a></p>
     </footer>
 
